Name:                   accelerate-tests-blockcopy
Version:                0.9.0.0
License:                BSD3
License-file:           LICENSE
Category:               Compilers/Interpreters, Concurrency, Data
Synopsis:               An embedded language for accelerated array processing
Description:            Tests for the accelerate package

Build-type:             Simple
Cabal-version:          >=1.6


Flag cuda
  Description:          enable the CUDA parallel backend for NVIDIA GPUs
  Default:              True

Executable accelerate-tests-blocktests
  HS-source-dirs:       src
  Main-is:              Main.hs

  Build-depends:        accelerate == 0.9.0.0,
                        base == 4.*,
                        HUnit == 1.2.2.*,
                        test-framework == 0.3.*,
                        test-framework-hunit == 0.2.*
  c-sources: src/fill_with_values.c

  If flag(cuda)
    CPP-options:        -DACCELERATE_CUDA_BACKEND


                        

