Name:                   accelerate-tests
Version:                0.8.1.0
License:                BSD3
License-file:           LICENSE
Category:               Compilers/Interpreters, Concurrency, Data
Synopsis:               An embedded language for accelerated array processing
Description:            Tests for the accelerate package

Build-type:             Simple
Cabal-version:          >=1.6


Flag cuda
  Description:          enable the CUDA parallel backend for NVIDIA GPUs
  Default:              True

Executable accelerate-tests
  HS-source-dirs:       src
  Main-is:              Main.hs

  Build-depends:        accelerate == 0.8.1.0,
                        base == 4.*,
                        QuickCheck >= 2

  If flag(cuda)
    CPP-options:        -DACCELERATE_CUDA_BACKEND

  Other-modules:        Function
                        Properties

